# VivariumAssistant

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  decision.yml  feature_request.yml
.github/workflows/: ci.yml
config/enclosures/: enclosure_1.yaml
config/profiles/: crested_gecko.yaml
docs/: README.md  architecture.md  configuration.md  control-loop-contract.md  getting-started.md  glossary.md  logging.md  mist-scheduling.md
docs/decisions/: 000-template.md  README.md
docs/guides/: control-loop-contract.md  manual-override.md
scripts/: run_sim.py  smoke_lighting.py  smoke_relay.py
src/vivariumassistant/apps/agent/: sim_agent.py
tests/: test_clock.py  test_device_state.py  test_lighting.py  test_manual_override.py  test_mist.py
